# alx-higher_level_programming

0x00-python-hello_world/: 10-check_cycle.c  3-print_number.py  7-edges.py  README.md
0x01-python-if_else_loops_functions/: 1-last_digit.py  100-print_tebahpla.py  101-remove_char_at.py  102-magic_calculation.py  11-pow.py  13-insert_number.c  3-print_alphabt.py  5-print_comb2.py  6-print_comb3.py  8-uppercase.py  9-print_last_digit.py
0x02-python-import_modules/: 0-add.py  0-import_add.py  1-calculation.py  100-my_calculator.py  101-easy_print.py  103-fast_alphabet.py  2-args.py  3-infinite_add.py  4-hidden_discovery.py  5-variable_load.py
0x03-python-data_structures/: 0-print_list_integer.py  1-element_at.py  10-divisible_by_2.py  100-print_python_list_info.c  11-delete_at.py  13-is_palindrome.c  2-replace_in_list.py  3-print_reversed_list_integer.py  4-new_in_list.py  5-no_c.py  6-print_matrix_integer.py  7-add_tuple.py  8-multiple_returns.py  9-main.py  9-max_integer.py  CMakeLists.txt  README.md  palindrome
0x04-python-more_data_structures/: 0-square_matrix_simple.py  1-search_replace.py  10-best_score.py  100-weight_average.py  101-square_matrix_map.py  102-complex_delete.py  11-multiply_list_map.py  12-roman_to_int.py  2-uniq_add.py  3-common_elements.py  4-only_diff_elements.py  5-number_keys.py  6-print_sorted_dictionary.py  7-update_dictionary.py  8-simple_delete.py  9-multiply_by_2.py  README.md
0x05-python-exceptions/: 0-safe_print_list.py  1-safe_print_integer.py  100-safe_print_integer_err.py  101-safe_function.py  2-safe_print_list_integers.py  (+5 more)
(+171 files in other folders)
